source/stylesheets/screen.css.scss
/* ... */
////////////////////////////////////////////////////////////////////////////////
// CODE SAMPLE STYLES
////////////////////////////////////////////////////////////////////////////////
// This is all the stuff that appears in the right half of the page

.content {
  pre, blockquote, .right {
    background-color: $code-bg;
    color: #fff;

    padding: 0 $main-padding 2em;
    margin: 0;
    width: $examples-width;

    float:right;
    clear:right;

    box-sizing: border-box;

    @extend %right-col;

    &>p { margin: 0; }

    a {
      color: $examples-link-text;
    }

    + pre, + blockquote, + .right {
        padding-top: 0;
        padding-bottom: 2em;
    }
  }

  blockquote code {
      background-color: lighten($code-bg, 7.5%);
    //   color: #E0E0E0;
  }

  span.right {
      display: block;
  }

  pre {
    @extend %code-font;

    &.highlight {
        .gp {
            -moz-user-select: none;
            -webkit-user-select: none;
            -ms-user-select: none;
            user-select: none;
            cursor: default;
        }
    }
  }
}

////////////////////////////////////////////////////////////////////////////////
// RESPONSIVE DESIGN
////////////////////////////////////////////////////////////////////////////////
// These are the styles for phones and tablets
// There are also a couple styles disperesed

@media (max-width: $tablet-width) {
  .tocify-wrapper {
    left: -$nav-width;

    &.open {
      left: 0;
    }
  }

  .page-wrapper {
    margin-left: 0;
  }

  #nav-button {
    display: block;
  }

  .tocify-wrapper .tocify-item > a {
    padding-top: 0.3em;
    padding-bottom: 0.3em;
  }
}

@media (max-width: $phone-width) {
  .dark-box {
    display: none;
  }

  %left-col {
    margin-right: 0;
  }

  .tocify-wrapper .lang-selector {
    display: none;
  }

  .page-wrapper .lang-selector {
    display: none;
  }

  %right-col {
    width: auto;
    float: none;
  }

  %right-col + %left-col {
    margin-top: $main-padding;
  }

    .content {
        table {
            width: 100%;
            width: calc(100% - 28px*2);
        }

        blockquote, pre, .right {
            padding-top: 2em;
        }
    }
}

